test/errors/library/library.rom
Error in `library.asm` on line 1: Could not get full path of <missing.asm>
